--- a/src/main/resources/password/pwm/i18n/Display_ca.properties
+++ b/src/main/resources/password/pwm/i18n/Display_ca.properties
@@ -150,9 +150,9 @@ Display_ResponsesPrompt=Introdueixi les respostes de seguretat
 Display_SelectionIndicator=Seleccioni una pregunta de la llista
 Display_SearchCompleted=Cerca finalitzada.
 Display_SearchResultsInfo=S'han retornat %1% resultats en %2%.
-Display_SearchResultsExceeded=Els resultats de la cerca han superat la mida de cerca m\u00e0xima
+Display_SearchResultsExceeded=Els resultats de la cerca han superat la mida de cerca m\u00e0xima.
 Display_SetRandomPasswordPrompt=Vol establir una contrasenya aleat\u00f2ria nova per a aquest usuari?
-Display_SearchResultsNone=Cap resultat
+Display_SearchResultsNone=Cap resultat.
 Display_Second=segon
 Display_Seconds=segons
 Display_SetupHelpdeskResponses=<p>L'administrador necessita que proporcioneu les seg\u00fcents respostes. Aquestes respostes s'utilitzen per verificar la vostra identitat en cas que contacteu amb el servei d'assist\u00e8ncia.</p>
@@ -274,7 +274,6 @@ Long_Title_VerificationSend=Abans de poder seleccionar aquest usuari, cal verifi
 Title_AnsweredQuestions=Preguntes amb resposta
 Title_ActivateUser=Activa el compte
 Title_Admin=Administraci\u00f3
-Title_Application=Restabliment de contrasenya d'autoservei
 Title_Captcha=Verificaci\u00f3
 Title_ChangePassword=Canvia la contrasenya
 Title_ConfirmResponses=Confirma les preguntes de seguretat
@@ -310,8 +309,6 @@ Title_SetupOtpSecret=Configura l'autenticaci\u00f3 de l'aplicaci\u00f3 m\u00f2bi
 Title_Shortcuts=Dreceres
 Title_Status=Estat
 Title_Success=Correcte
-Title_TitleBarAuthenticated=@User\:ID@  Autoservei de contrasenya
-Title_TitleBar=Autoservei de contrasenya
 Title_UpdateProfile=Actualitza el perfil
 Title_UpdateProfileConfirm=Confirma les dades del perfil
 Title_UserData=Les meves dades
