--- a/src/main/resources/password/pwm/i18n/Display_pt_BR.properties
+++ b/src/main/resources/password/pwm/i18n/Display_pt_BR.properties
@@ -150,9 +150,9 @@ Display_ResponsesPrompt=Digite suas respostas de seguran\u00e7a
 Display_SelectionIndicator=Selecione um item de pergunta na lista
 Display_SearchCompleted=Pesquisa conclu\u00edda.
 Display_SearchResultsInfo=Retornou %1% resultados em %2%.
-Display_SearchResultsExceeded=Os resultados da pesquisa excedem o tamanho m\u00e1ximo da pesquisa
+Display_SearchResultsExceeded=Os resultados da pesquisa excedem o tamanho m\u00e1ximo da pesquisa.
 Display_SetRandomPasswordPrompt=Definir uma nova senha aleat\u00f3ria para este usu\u00e1rio?
-Display_SearchResultsNone=Nenhum resultado
+Display_SearchResultsNone=Nenhum resultado.
 Display_Second=segundo
 Display_Seconds=segundos
 Display_SetupHelpdeskResponses=<p>O administrador precisa que voc\u00ea forne\u00e7a as respostas a seguir. Essas respostas s\u00e3o usadas para verificar sua identidade caso voc\u00ea contate o suporte t\u00e9cnico para assist\u00eancia.</p>
@@ -274,7 +274,6 @@ Long_Title_VerificationSend=Esse usu\u00e1rio s\u00f3 poder\u00e1 ser selecionad
 Title_AnsweredQuestions=Perguntas Respondidas
 Title_ActivateUser=Ativar Conta
 Title_Admin=Administra\u00e7\u00e3o
-Title_Application=Redefini\u00e7\u00e3o de Senha de Autoatendimento
 Title_Captcha=Verifica\u00e7\u00e3o
 Title_ChangePassword=Mudar Senha
 Title_ConfirmResponses=Confirmar Perguntas de Seguran\u00e7a
@@ -310,8 +309,6 @@ Title_SetupOtpSecret=Configurar Autentica\u00e7\u00e3o do Aplicativo M\u00f3vel
 Title_Shortcuts=Atalhos
 Title_Status=Status
 Title_Success=Sucesso
-Title_TitleBarAuthenticated=@User\:ID@  Autoatendimento de Senha
-Title_TitleBar=Autoatendimento de Senha
 Title_UpdateProfile=Atualizar Perfil
 Title_UpdateProfileConfirm=Confirmar Dados do Perfil
 Title_UserData=Meus Dados
