--- a/src/main/resources/password/pwm/i18n/Display_sv.properties
+++ b/src/main/resources/password/pwm/i18n/Display_sv.properties
@@ -150,9 +150,9 @@ Display_ResponsesPrompt=Skriv svaren p\u00e5 dina s\u00e4kerhetsfr\u00e5gor
 Display_SelectionIndicator=V\u00e4lj en fr\u00e5ga i listan
 Display_SearchCompleted=S\u00f6kningen \u00e4r klar.
 Display_SearchResultsInfo=Returnerade %1% resultat p\u00e5 %2%.
-Display_SearchResultsExceeded=S\u00f6kresultaten \u00f6verskred den maximala s\u00f6kningsstorleken
+Display_SearchResultsExceeded=S\u00f6kresultaten \u00f6verskred den maximala s\u00f6kningsstorleken.
 Display_SetRandomPasswordPrompt=Ange ett nytt slumpm\u00e4ssigt l\u00f6senord f\u00f6r den h\u00e4r anv\u00e4ndaren?
-Display_SearchResultsNone=Inga resultat
+Display_SearchResultsNone=Inga resultat.
 Display_Second=sekund
 Display_Seconds=sekunder
 Display_SetupHelpdeskResponses=<p>Din administrat\u00f6r kr\u00e4ver att du l\u00e4mnar f\u00f6ljande svar. Dessa svar anv\u00e4nds f\u00f6r att verifiera din identitet om du kontaktar din supportavdelning f\u00f6r att f\u00e5 hj\u00e4lp.</p>
@@ -274,7 +274,6 @@ Long_Title_VerificationSend=Innan den h\u00e4r anv\u00e4ndaren kan v\u00e4ljas m
 Title_AnsweredQuestions=Besvarade fr\u00e5gor
 Title_ActivateUser=Aktivera konto
 Title_Admin=Administration
-Title_Application=\u00c5terst\u00e4llning av l\u00f6senord f\u00f6r Self Service
 Title_Captcha=Verifiering
 Title_ChangePassword=\u00c4ndra l\u00f6senord
 Title_ConfirmResponses=Bekr\u00e4fta s\u00e4kerhetsfr\u00e5gor
@@ -310,8 +309,6 @@ Title_SetupOtpSecret=Installera autentisering via mobilapp
 Title_Shortcuts=Genv\u00e4gar
 Title_Status=Status
 Title_Success=Lyckades
-Title_TitleBarAuthenticated=@User\:ID@  Sj\u00e4lvbetj\u00e4ning f\u00f6r l\u00f6senord
-Title_TitleBar=Sj\u00e4lvbetj\u00e4ning f\u00f6r l\u00f6senord
 Title_UpdateProfile=Uppdatera profil
 Title_UpdateProfileConfirm=Bekr\u00e4fta profildata
 Title_UserData=Mina data
