--- a/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -606,6 +606,7 @@ Setting_Description_recovery.response.readPreference=Select the location where @
 Setting_Description_recovery.response.writePreference=<p>Select the location where @PwmAppName@ writes the responses.  @PwmAppName@ writes to all storage methods when the user configures their response answers.</p><p><b>WARNING\: </b>Never use the LocalDB to store responses in a production system as there are no methods to make the LocalDB storage redundant, nor are optimal backup methods available for the LocalDB.</p>
 Setting_Description_recovery.searchFilter=Add an LDAP search filter @PwmAppName@ uses to search for users during forgotten password recovery. The LDAP search filter must include each attribute in the <b>Forgotten Password User Search Form</b>.  @PwmAppName@ replaces tokens made of a form item name (such as <code>cn</code>) enclosed with a percent sign <code>%cn%</code> with values supplied by the user.<br><br>For example, if the <b>Activate User Form</b> included the attributes <code>cn</code> and <code>sn</code>, then this filter might be appropriate\:<br><br><code>(&amp;(objectClass\=person)(cn\=%cn%)(sn\=%sn%))</code><br><br>If this setting is left blank, @PwmAppName@ automatically generates a search filter based on the required items in the <b>Forgotten Password User Search Form</b>.
 Setting_Description_recovery.sendNewPassword.sendMethod=Select the method to send new password to users when the <b>Forgotten Password Success Action</b> is set to <b>Send new password</b>.
+Setting_Description_recovery.token.resend.enable=Allow the user to resend a token in case they did not receive it.
 Setting_Description_recovery.verificationMethods=Select the verification methods @PwmAppName@ uses during the forgotten password process.  The users must satisfy each option set to required.  The users can then select any of the remaining optional methods until they complete the minimum number of optional methods.<br/><br/>You can modify tthe names and a description shown to users for these methods by editing the display text keys for <code>Field_VerificationMethod[Method]</code> and <code>Description_VerificationMethod[Method]</code> where <code>[Method]</code> is the method type.
 Setting_Description_reporting.enable=Enable daily reporting job.  When enabled, @PwmAppName@ will execute a daily report update job.  
 Setting_Description_reporting.job.intensity=Control the level of intensity of a reporting job execution.  Higher levels will complete the report job faster but cause more workload on @PwmAppName@ and the LDAP directory.
@@ -1085,6 +1086,7 @@ Setting_Label_recovery.response.readPreference=Response Read Location
 Setting_Label_recovery.response.writePreference=Response Write Location
 Setting_Label_recovery.searchFilter=Forgotten Password User Search Filter
 Setting_Label_recovery.sendNewPassword.sendMethod=New Password Send Method
+Setting_Label_recovery.token.resend.enable=Allow Token Resend
 Setting_Label_recovery.verificationMethods=Verification Methods
 Setting_Label_reporting.enable=Enable Daily Reporting Job
 Setting_Label_reporting.job.intensity=Reporting Job Intensity
